--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include('header') -%>
 
-<ul>
+<ul class="index-list">
   <% for (const category of categories) { %>
     <li><a href="/spurningar/<%=category.id%>"><%=category.name%></a></li>
   <% } %>
