--- a/public/styles.css
+++ b/public/styles.css
@@ -3,32 +3,56 @@
   padding: 0;
 }
 
+@font-face {
+  font-family: 'Anton';
+  src: url('./Anton/Anton-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
+  font-family:  Arial, sans-serif;
+  background-color:  #ffd700;
+  color: #000;
+  transition: background-color 0.2s;
   }
   
   header {
-    background-color: #333;
-    color: #fff;
-    padding: 1em;
+    padding: 0;
+    margin: 0;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #ffd700;
+    color: #000;
     text-align: center;
     width: 100%;
-    margin: 0;
+    transition: background-color 0.2s;
   }
-  
+
+  header h1 {
+    font-family: 'Anton', sans-serif;
+    font-size: 3em;
+    color: #000;
+  }
  
-  
   header ul {
     list-style: none;
     padding: 0;
     display: flex;
     justify-content: center;
     gap: 1em;
+    margin-top: 20px;
+    margin-bottom: 20px;
+
   }
   
   header ul li a {
-    color: #fff;
+    color: #000000;
+    font-size: large;
+    font-weight: bold;
     text-decoration: none;
   }
   
@@ -55,7 +79,8 @@ body {
     text-decoration: none;
     color: #000000;
     font-size: large;
-    background-color: #dd7e7e;
+    background-color: #ffd700;
+    border: 1px solid #000;
     padding: 1em;
     border-radius: 5px;
     width: 100px;
@@ -63,24 +88,95 @@ body {
   }
 
   .index-list a:hover{
-    background-color: #b5b5b5;
+    background-color: #c60d0d;
     transform: translateY(-2px);
   }
 
-  
+form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
 footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height : 15vh;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
+  background-color: #000;
 }
+
   
 footer a{
   text-decoration: none;
-  color: #000000;
+  color: #000;
   font-size: large;
-  background-color: hsl(186, 36%, 55%);
+  background-color: #ffd700;
   padding: 1em;
   border-radius: 5px;
   width: 100px;
 }
+
+
+
+/*extras*/
+.gun{
+  position: absolute;
+   top: 50%;
+   left: 10%;
+   background-image: url(./gun.png);
+   background-size: cover;
+   height: 200px;
+   width: 200px;
+   
+ }
+ 
+ .rotate {
+   animation: gun-spin 0.2s linear;
+ }
+ 
+ @keyframes gun-spin {
+   0% {
+     transform: rotate(0deg);
+   }
+   25% {
+     transform: rotate(-30deg);
+   }
+   50% {
+     transform: rotate(-20deg);
+   }
+   75% {
+     transform: rotate(-10deg);
+   }
+   100% {
+     transform: rotate(0deg);
+   }
+ }
+ 
+ .drop-down {
+   animation: bullet-drop 0.5s forwards;
+ }
+ 
+ @keyframes bullet-drop {
+   0% {
+     transform: translateY(0);
+     opacity: 1;
+   }
+   100% {
+     transform: translateY(500px);
+     opacity: 0;
+   }
+ }
+ 
+ .bg-flash {
+   background-color: red !important;
+   transition: background-color 0.2s;
+ }
+
