--- a/public/styles.css
+++ b/public/styles.css
@@ -99,32 +99,74 @@ form{
   align-items: center;
 }
 
+.spurningar{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2em;
+  gap: 1em;
+}
 
 
-footer{
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height : 15vh;
+.question {
+  margin-bottom: 1em;
+  padding: 1em;
+  border: 1px solid #000;
+  border-radius: 5px;
+  background-color: #fff;
+}
+
+.question h3 {
+  font-family: 'Anton', sans-serif;
+  font-size: 1.5em;
+  margin-top: 0;
+  margin-bottom: 0.5em;
+}
+
+.answer-option {
+  margin-bottom: 0.5em;
   display: flex;
   align-items: center;
-  justify-content: center;
-  text-align: center;
-  background-color: #000;
 }
 
-  
-footer a{
-  text-decoration: none;
-  color: #000;
-  font-size: large;
-  background-color: #ffd700;
-  padding: 1em;
+.answer-option input[type="radio"] {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  width: 20px;
+  height: 20px;
+  border: 2px solid #000;
+  border-radius: 50%;
+  outline: none;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.answer-option input[type="radio"]:checked {
+  background-color: #c60d0d;
+  border: 2px solid #c60d0d;
+}
+
+.answer-option label {
+  margin-left: 0.5em;
+  font-size: 1.2em;
+}
+
+.btn {
+  background-color: #c60d0d;
+  color: #fff;
+  padding: 0.75em 1.5em;
+  border: none;
   border-radius: 5px;
-  width: 100px;
+  cursor: pointer;
+  font-size: large;
 }
 
-
+.btn:hover {
+  background-color: #000;
+  color: #ffd700;
+}
 
 /*extras*/
 .gun{
@@ -179,4 +221,3 @@ footer a{
    background-color: red !important;
    transition: background-color 0.2s;
  }
-
