--- a/src/views/form.ejs
+++ b/src/views/form.ejs
@@ -1,5 +1,5 @@
 <%- include('header') -%>
-
+<div class="form-wrapper">
 <section>
   <h2>Bæta við spurningu</h2>
 
@@ -48,5 +48,6 @@
     </div>
   </form>
 </section>
+</div>
 
 <%- include('footer') -%>
