--- a/src/views/quiz-result.ejs
+++ b/src/views/quiz-result.ejs
@@ -19,12 +19,12 @@
         <li><a href="/form">Senda inn spurningu</a></li>
       </ul>
 </header>
-
+<div class=results>
 <section>
   <h2>Niðurstaða Svara</h2>
   <p><%= message %></p>
-  <p>You got <%= correctCount %> out of <%= total %> questions correct.</p>
   <a href="/">Til baka</a>
 </section>
+</div>
 
 <%- include('footer') -%>
