--- a/src/views/quiz-result.ejs
+++ b/src/views/quiz-result.ejs
@@ -21,8 +21,7 @@
 </header>
 <div class=results>
 <section>
-  <h2>Niðurstaða Svara</h2>
-  <p><%= message %></p>
+  <h1><%= message %></h1>
   <a href="/">Til baka</a>
 </section>
 </div>
